[package]
name = "dumpfun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dumpfun"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "anchor-debug", "custom-panic"))'
] }

[features]
anchor-debug = []
default = []
cpi = ["no-entrypoint"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi"] }
solana-system-interface = "1.0.0"
anchor-spl = "0.31.1"
mpl-token-metadata = "5.1.0"

